--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./calculator.css">
 </head>
 <body>
-    
+    <div id="calculator">
+        <div id="display">1234567890</div>
+        <div id="buttons"></div>
+    </div>
     <script src="./calculator.js"></script>
 </body>
 </html>
