Feat: Add action to click operator buttons and make the calculator work

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">1234567890</div>
+        <div id="display">0</div>
         <div id="buttons"></div>
     </div>
     <script src="./calculator.js"></script>
